--- a/estilo/style.css
+++ b/estilo/style.css
@@ -24,8 +24,9 @@ main {
 
 section#telefone {
     position: absolute;
-    top: 15%;
-    left: 33%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     height: 470px;
     width: 233px;
